plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
//    id 'checkstyle'
//    id("org.owasp.dependencycheck") version "12.1.1"
    id 'jacoco'
    id "org.sonarqube" version "4.4.1.3373"
}

group = 'com.deliverar'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

allprojects {
    repositories {
        mavenCentral()
        maven {
            url = uri('https://hyperledger.jfrog.io/artifactory/besu-maven/')
        }
    }
}

//checkstyle {
//    toolVersion = '10.14.0'
//    configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
//}
//checkstyleTest {
//    source = ["src/test/java"]
//}
//
//checkstyleMain {
//    source = ["src/main/java"]
//}
//
//dependencyCheck {
//    format = 'HTML'
//    failBuildOnCVSS = 7
//}



dependencies {
    // Spring
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    runtimeOnly     'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly     'io.jsonwebtoken:jjwt-jackson:0.11.5'

    implementation('org.web3j:core:4.11.3') {
        exclude group: 'tech.pegasys', module: 'jc-kzg-4844'
    }
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'

    // MapStruct processor
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    // Lombok (compilación)
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Swagger UI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

    // PostgreSQL y Flyway
    runtimeOnly 'org.postgresql:postgresql:42.5.0'
    implementation 'org.flywaydb:flyway-core:8.5.13'


    // Checkstyle
//    checkstyle "com.puppycrawl.tools:checkstyle:${checkstyle.toolVersion}"
    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.3'
    testImplementation 'io.projectreactor:reactor-test'
    testRuntimeOnly 'com.h2database:h2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

}

jacoco {
    toolVersion = "0.8.11"
}

tasks.test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
        showStandardStreams = true
    }
    finalizedBy tasks.jacocoTestReport
}

tasks.jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}

sonar {
    properties {
        property "sonar.projectKey", "payments.deliver.ar"
    }
}
